# MuJoCoXR

./: .gitignore  CMakeLists.txt  README.md
android/: AndroidManifest.xml  package-apk.sh
app/: assets.cc  assets.h  frames.h  main.cc  mxr_log.h  scene_renderer.cc  scene_renderer.h  teleop.cc  teleop.h  vk_context.cc  vk_context.h  xr_shell.cc  xr_shell.h
app/shaders/: scene.frag  scene.vert
assets/: ar_scene.xml
baselines/: host-x86_64.txt
bench/: baseline.cc  excitation.h
docs/: on-device-validation.md
host/: ik_prototype.cc
scripts/: fetch-menagerie.sh
src/: ik_dls.c  ik_dls.h  mxr_error.h  rate_slew.h
